Fixed navbar spacing

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,6 +8,9 @@ p {
     overflow: auto;
     background-color: #ff6600;
     font-family: Arial, Helvetica, sans-serif;
+    height: 60px;
+    display: flex;
+    align-items: center; /* align vertical */
 }
 
 .navbar a {
@@ -15,7 +18,7 @@ p {
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 2px;
     text-decoration: none;
 }
 
